@startuml

title __VIEWMODELS's Class Diagram__\n

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.viewmodels {
      class LoginViewModel {
          {static} - TAG : String
          {static} - ERROR_DIALOG_REQUEST : int
          - mGoogle : GoogleSignInClient
          - mAuth : FirebaseAuth
          + LoginViewModel()
          + loginUser()
          + registerUser()
          - isServicesOk()
          - toastError()
          - isValid()
          + checkAuth()
      }
    }
  }
  

  package com.apps.jivory.googlemaps {
    package com.apps.jivory.googlemaps.viewmodels {
      class MainViewModel {
          {static} + TAG : String
          - mAuth : FirebaseAuth
          - mUser : FirebaseUser
          + MainViewModel()
          + deleteUser()
          + updateUser()
          + insertNewPost()
          + updateNewPost()
          + getUserData()
          + getPostData()
          + getAllUsersData()
          + deletePost()
          + getFirebaseUserID()
          + logout()
          + updatePost()
      }
    }
  }
  

  LoginViewModel -up-|> AndroidViewModel
  LoginViewModel o-- Repository : repo
  MainViewModel -up-|> AndroidViewModel
  MainViewModel o-- Repository : repo
  MainViewModel o-- FirebaseLiveDataHelper : firebaseUserData
  MainViewModel o-- FirebaseLiveDataHelper : firebasePostsData
  MainViewModel o-- FirebaseLiveDataHelper : firebaseAllUsersData


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
